# multi-ql

ArdavanGhaffari/QL/: pom.xml
DavidMoreira/: .gitignore  README.md  pom.xml
Edward Poot/src/QL/: doc.go  main.go  makefile  ql.bnf  ql_test.go
Edward Poot/src/ql/: .gitignore  README.md  doc.go  example.ql  form.ql  glide.yaml  libui.A.dylib  main.go  makefile  ql_test.go  run.go
Fati/: .classpath  .project
Fati/src/antlrProducts/: QLBaseVisitor.java  QLLexer.java  QLParser.java  QLVisitor.java
Fati/src/semanticAnalysis/: AbsTypeChecking.java  SymTabel.java  TypeCheckingVisitICode.java
Fati/src/testEvaluation/: TestAbstract.java  TestCalculation.java  TestComparison.java  TestLogical.java  TestMixAndORNot.java  TestMixCalculation.java  TestNemoone.java  TestNotUnary.java
FelixBarten/: .gitignore  readme.md
FelixBarten/CSharp/QL/: QL.sln
FelixBarten/Java/: .gitignore
FelixBarten/Java/QL/: build.xml
FelixBarten/QL/: .classpath  .gitignore  .project  QL.sln  cond.txt
FelixBarten/QL/QL/: AssemblyInfo.fs  Lexer.fs  Lexer.fsl  Lexer.l  Lexer2.fs  Lexer2.fsl  Parser.fs  Parser.fsi  Parser.fsp  Parser.y  Parser2.fs  Parser2.fsi  Parser2.fsp  Program.fs  QL.fsproj  Statements.fs  Statements2.fs  sql.fs
FelixBarten/QL/QL GUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  QL GUI.csproj
FelixBarten/QL/examples/: formexample.ql  questionexample.ql  questionnaire.ql
FelixBarten/QL/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
FelixBarten/QL/src/: .gitignore  QL.g4
GorjanJovanovski/: MyGrammer.g4  MyGrammer.tokens  MyGrammerLexer.js  MyGrammerLexer.tokens  MyGrammerListener.js  MyGrammerParser.js  MyGrammerVisitor.js  QLGrammar.g4  index.html  jisonGrammar.txt
GorjanJovanovski/css/: main.css
GorjanJovanovski/js/: allClasses.js  ast.js  astFunctions.js  classes.js  eventHandlers.js  eventHandlingFunctions.js  htmlFunctions.js  htmlGeneration.js  main.js
GorjanJovanovski/js/antlrGen/: QLGrammarLexer.js  QLGrammarListener.js  QLGrammarParser.js  QLGrammarVisitor.js
GorjanJovanovski/js/lib/: FileSaver.js  jison.js  jquery.js
JordyHeemskerk/MyPlayground.playground/: Contents.swift
JordyHeemskerk/QL/QL/: ASTNode.swift  ASTVisitor.swift  AddExpression.swift  Addition.swift  AndExpression.swift  AppDelegate.swift  BaseASTVisitor.swift  BinaryExpression.swift  Block.swift  BlockVisitor.swift  BooleanLiteral.swift  BooleanType.swift  ConcreteASTVisitor.swift  ConditionClause.swift  DeclarationChecker.swift  DivExpression.swift  (+40 more)
JordyHeemskerk/QL/QL.xcodeproj/: project.pbxproj
JordyHeemskerk/Software Construction.xcworkspace/: contents.xcworkspacedata
Kevin van den Bekerom/DSLQL/: .classpath  .project  pom.xml
KevinBankersen/: .gitignore
KevinBankersen/.metadata/: version.ini
KevinBankersen/ql/: .checkstyle  .classpath  .gitignore  .project  Log.txt  pom.xml
King/resources/: .gitignore  questionaire.gr
Merijn/: config.js  index.html  karma.conf.js  package.json
Merijn/src/: ast.js  ast_normalization.js  ast_semantic_analysis.js  ast_walking.js  error.js  evaluation.js  expr_observable.js  log.js  main.js  observable.js  parser.js  rendering.js  scope.js  type_inference.js  types.js  value_evaluation.js  value_operations.js  values.js  widgets.js
Merijn/test/: parserSpec.js
Mickeydus/QL/: build.xml
NickLodewijks/: .classpath  README.md  build.properties  build.xml
NickLodewijks/resources/: Questionaire.ql  Questionnaire.ql  Stylesheet.qls
RoydeWildt/QLlib/: SE-QLlib.ipr  build.gradle  settings.gradle
ThreatDragonModels/Test/: Test.json
anxys/: .gitignore
anxys/QL/: ql.cabal  stack.yaml
anxys/QL/app/: GUIContext.hs  GUIElement.hs  GUIError.hs  Main.hs
anxys/QL/app/GUI/: GUIContext.hs  GUIElement.hs  GUIError.hs
anxys/QL/src/: Ast.hs  Environment.hs  Interpreter.hs  Lib.hs  TypeChecker.hs  Value.hs
anxys/QL/src/Language/: Ast.hs  Identifier.hs  Money.hs  Parsing.hs  QL.hs  Simplify.hs  TypeChecker.hs
anxys/QL/src/Language/Annotated/: AnnotatedAst.hs  Parsing.hs  Simplify.hs
anxys/QL/src/Language/Annotated/Location/: Location.hs
anxys/QL/src/Language/Location/: Location.hs
anxys/QL/src/Language/SemanticAnalysis/: SemanticAnalysis.hs  TypeChecker.hs
anxys/QL/src/Language/SemanticAnalysis/SemanticError/: SemanticError.hs
anxys/QL/src/QL/: Environment.hs  Identifier.hs  Interpreter.hs  Location.hs  Money.hs
anxys/QL/src/QL/Language/: Parser.hs
anxys/QL/src/QL/Language/Syntax/: Ast.hs  Simplify.hs
anxys/QL/src/QL/Language/Syntax/Annotated/: AnnotatedAst.hs  Parsing.hs
anxys/QL/src/QL/SemanticAnalysis/: SemanticAnalysis.hs  SemanticError.hs
anxys/QL/src/QL/Value/: ParseValue.hs  Value.hs  ValueTypes.hs
anxys/QL/src/Values/: .ParseValue.hs.swp  ParseValue.hs  Value.hs  ValueTypes.hs
anxys/QL/test/: Spec.hs
nicodegroot/: .classpath  Todo  exampleQuestionnaire  pom.xml
olavTrauschke/: .gitignore
olavTrauschke/QL/: NumericTypeScheme.txt  build.xml  complexExpression.ql  complexExpressionWithComments.ql  computedQuestion.ql  form.ql  formWithBooleanAndStringQuestions.ql  formWithCorrectDuplicateLabel.ql  formWithCyclicDependency.ql  formWithCyclicDependencyInvolvingConditionalStatement.ql  formWithIncorrectDuplicateLabel.ql  formWithLiterals.ql  formWithNonBooleanCondition.ql  formWithOnlyBooleanQuestions.ql  formWithRedefinedQuestions.ql  formWithWrongQuestionType.ql  formWithoutDependencyErrors.ql  formWithoutNumericQuestions.ql  jacc.bat  question.ql
robin/: .classpath
savahu/QL/: build.xml
spiros/: .classpath  testQuestionnaire
spiros/src/: FuckingToDo  QL.tokens
stevan/: pom.xml
tomvanduist/QLSwift/: Podfile
wstikkelorum/: .classpath  .project
wstikkelorum/resources/: CyclicExampleA.ql  CyclicExampleB.ql  CyclicExampleC.ql  Questionaire.ql  SmallQuestionaire.ql  taxOfficeExample.ql
wstikkelorum/testResources/: ConditionNotBoolean.ql  CyclicExampleA.ql  CyclicExampleD.ql  DuplicateLabel.ql  DuplicateQuestionWithDifferentType.ql  EvaluationTestForm.ql  InvalidTypeForOperand.ql  UndefinedQuestion.ql  testAllOperands.ql  testPrecedence.ql
(+4163 files in other folders)
