name:                ql
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ql#readme
license:             BSD3
license-file:        LICENSE
author:              Joel James Bartholomew 
maintainer:          j-bartholomew@live.com
copyright:           2016 Joel James Bartholomew 
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                       src/Language
                       src/Language/Annotated
                       src/Language/Annotated/Location
  exposed-modules:     AnnotatedAst
                       Simplify
                       Ast
                       TypeChecker
                       Parsing
                       Location
                       Environment
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , syb
                     , containers
  default-language:    Haskell2010

executable ql-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ql
                     , parsec
                     , wx
  default-language:    Haskell2010

test-suite ql-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ql
                     , hspec
                     , QuickCheck
                     , test-framework-quickcheck2
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ql
